Mon Sep 23 15:38:58 1996  Barry Jaspan  <bjaspan@mit.edu>

	* stop_servers_local: delete krb5kdc_rcache after stopping kdc

	* Makefile.ov: create restore_files.sh as symlink to save_files.sh

Wed Sep 11 17:01:06 1996  Barry Jaspan  <bjaspan@mit.edu>

	* make-host-keytab.pl.in: use kadmin instead of kadm5_keytab

Mon Aug 12 11:36:57 1996  Barry Jaspan  <bjaspan@mit.edu>

	* init_db: use kdb5_util instead of kdb5_create

Fri Jul 12 14:48:20 1996  Marc Horowitz  <marc@mit.edu>

	* stop_servers_local (true, false): use the path to find these,
 	instead of looking in /bin explicitly.

	* start_servers_local (/usr/tmp): /usr/tmp doesn't exist on some
 	systems.  Check for that and /var/tmp, and use the one which
 	exists.  (true, false): use the path to find these, instead of
 	looking in /bin explicitly.

	* make-host-keytab.pl.in: perl5 requires that @ in strings be
 	backwhacked.  (EDIT_KEYTAB): ovsec_adm_keytab is now kadm5_keytab.
	
  	* init_db: kadmin_create should be kdb5_create
