@@ -1,0 +1,5 @@
+AC_INIT(configure.in)
+CONFIG_RULES
+CONFIG_DIRS(scripts util)
+DO_SUBDIRS
+V5_AC_OUTPUT_MAKEFILE
