@@ -1,0 +1,3 @@
+AC_INIT(init_db)
+CONFIG_RULES
+V5_AC_OUTPUT_MAKEFILE
