@@ -1,0 +1,15 @@
+AC_INIT(tcl_kadm5.c)
+WITH_CCOPTS
+CONFIG_RULES
+AC_PROG_INSTALL
+KRB_INCLUDE
+USE_KADMCLNT_LIBRARY
+USE_GSSAPI_LIBRARY
+USE_KADMSRV_LIBRARY
+USE_GSSRPC_LIBRARY
+USE_DYN_LIBRARY
+USE_KDB5_LIBRARY
+USE_SS_LIBRARY
+V5_USE_SHARED_LIB
+KRB5_LIBRARIES
+V5_AC_OUTPUT_MAKEFILE
