@@ -1,3 +1,7 @@
+Tue Sep 24 13:29:14 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* create Makefile.in and configure.in
+
 Mon Aug 12 11:50:42 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* Makefile.ov: add $(REGEXLIB)
