@@ -1,3 +1,7 @@
+Tue Sep 24 13:28:54 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* create Makefile.in and configure.in
+
 Mon Sep 23 15:38:58 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* stop_servers_local: delete krb5kdc_rcache after stopping kdc
